@@ -8,6 +8,7 @@ package {{ $name }};
 our $VERSION = '{{ $dist->version }}';
 
 use 5.016;
+use if "$]" >= 5.022, experimental => 're_strict';
 no if "$]" >= 5.031009, feature => 'indirect';
 no if "$]" >= 5.033001, feature => 'multidimensional';
 no if "$]" >= 5.033006, feature => 'bareword_filehandles';
